Add routes for offers list and single offer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,9 @@
     "ABOUT": "About",
     "REGISTER": "Register",
     "LOGIN": "Login"
+  },
+  "OFFER": {
+    "APPLY": "Apply",
+    "REMOTE": "Remote"
   }
 }
