--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -5,5 +5,9 @@
     "ABOUT": "O nas",
     "REGISTER": "Rejestracja",
     "LOGIN": "Zaloguj"
+  },
+  "OFFER": {
+    "APPLY": "Aplikuj",
+    "REMOTE": "Zdalnie"
   }
 }
