Add mobile menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "CATEGORY": "Category",
     "TECHNOLOGY": "Technology",
     "EXP_LEVEL": "Experience",
-    "REMOTE": "Remote"
+    "REMOTE": "Remote",
+    "RESET": "Reset All"
   }
 }
