--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -15,6 +15,7 @@
     "CATEGORY": "Kategoria",
     "TECHNOLOGY": "Technologie",
     "EXP_LEVEL": "Doświadczenie",
-    "REMOTE": "Zdalnie"
+    "REMOTE": "Zdalnie",
+    "RESET": "Resetuj Filtry"
   }
 }
