--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,8 @@
     "COMPANIES": "Companies",
     "ADDOFFER": "Add Offer",
     "REGISTER": "Register",
-    "LOGIN": "Login"
+    "LOGIN": "Login",
+    "SAVED": "Saved"
   },
   "OFFER": {
     "APPLY": "Apply",
@@ -30,5 +31,17 @@
     "PASSWORD": "Password",
     "CONFIRM_PASSWORD": "Confirm Password",
     "CREATE": "Create"
+  },
+  "OFFER_ITEM": {
+    "WATCH": "Save",
+    "MUST_HAVE": "Must Have",
+    "NICE_TO_HAVE": "Nice To Have",
+    "DESCRIPTION": "Description",
+    "COMPANY_NAME": "Company Name",
+    "COMPANY_SIZE": "Company Size"
+  },
+  "SAVED": {
+    "NO_OFFERS": "At This Moment You Dont'have Any Saved Job Offers.",
+    "YOUR_SAVED_OFFERS": "Your Saved Job Offers"
   }
 }
